demo-gitops/service-b/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: service-b
  labels:
    app: service-b
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
        root-version: v2.1.5
    spec:
      containers:
        - name: service-b
          image: ghcr.io/jhbaek-dev/k8s-blue-green-demo/service-b:qa-c2900de-20250823-033003
          imagePullPolicy: Always
          ports:
            - name: traffic
              containerPort: 3000
              protocol: TCP
  strategy:
    blueGreen:
      autoPromotionEnabled: false
      activeService: service-b
      previewService: service-b-preview
