demo-gitops/service-b/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b-preview
  labels:
    app: service-b
spec:
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: service-b
