demo-gitops/service-b/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
  labels:
    app: service-b
spec:
  ports:
  - port: 3000
    protocol: TCP
    name: traffic
  selector:
    app: service-b
