demo-gitops/service-b/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service-b-routing
  namespace: default
spec:
  hosts:
    - service-b
  http:
    - match:
        - sourceLabels:
            root-version: "v2.1.5"
      route:
        - destination:
            host: service-b-preview
            port:
              number: 3000
    - route:
        - destination:
            host: service-b
            port:
              number: 3000
